Fix styling and spacing for likes on comments

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -24,10 +24,9 @@
 
   .comments > .comment,
   .comment.new-comment-form-wrapper {
-
     margin: 0;
     border-top: 1px dotted $border-grey;
-    padding: 10px 0;
+    padding: 10px 0 0;
 
     .info {
       margin-top: 5px;
@@ -54,8 +53,6 @@
     }
   }
 
-  .comment.new-comment-form-wrapper { padding-bottom: 0; }
-
   .submit-button {
     margin-top: 10px;
     input {
@@ -78,6 +75,21 @@
     // scss-lint:disable ImportantRule
     display: block !important;
     // scss-lint:enable ImportantRule
+  }
+}
+
+.likes-on-comment {
+  &.likes {
+    margin-top: 6px;
+  }
+
+  .media {
+    margin: 0 0 2px;
+  }
+
+  .expand-likes {
+    display: inline-block;
+    margin-bottom: 4px;
   }
 }
 
